@@ -1,3 +1,14 @@
+2008-08-23 Jens Tkotz <jens@peino.de> 1.5.9-svn-b4
+
+ * Change: Remove wrong check for nobody in Album::isItemOwner
+
+ * Change: Changed order of some methodes in Album.php
+           Added lots of phpDoc
+
+ * Fix: Add loggedIn user for check Album::isOwner
+ 
+ * Fix: getVotingIdByIndex for subalbums
+ 
 2008-08-23 Jens Tkotz <jens@peino.de> 1.5.9-svn-b3
  
  * Change: Remove special stats.footer use general.footer
